// protoc --go_out=. *.proto
package iprs.pb;

message IprsEntry {
	enum ValidityType {
		// Setting an EOL says "this record is valid until..."
		EOL = 0;
		// Setting a time range says "this record is valid between x and y"
		TimeRange = 1;
	}
	enum VerificationType {
		// Key verification verifies a record is signed with a private key
		Key = 0;
		// Cert verification verifies a record is signed by a certificate issued by a CA
		Cert = 1;
	}
	required bytes value = 1;
	required bytes signature = 2;
	required VerificationType verificationType = 3;
	required bytes verification = 4;
	optional ValidityType validityType = 5;
	optional bytes validity = 6;
	optional uint64 sequence = 7;
}
